syntax = "proto3";

option go_package = "./pb";

package calculator;

service Calculator {
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}