syntax = "proto3";

option go_package = "./pb";

package ping;

service Ping {
    rpc PingPong(PingRequest) returns (PongResponse) {};
}

message PingRequest {
    string message = 1;
}

message PongResponse {
    string message = 1;
}